--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,1 +1,11 @@
-<app-lpcheckbutton></app-lpcheckbutton>
+<mat-card class="cdog">
+    <mat-card-title-group>
+      <mat-card-title>cdogdagamer</mat-card-title>
+      <mat-card-subtitle>AKA: snakedog</mat-card-subtitle>
+      <img src="./assets/whatishedoing.PNG" class="image">
+    </mat-card-title-group>
+    <mat-card-content>
+        <h4>cdog has an incredibly thick skin--military dependent, older brother who used him as a sparring partner, and has had ample experience with folks far more hardcore than any student who's walked into any of his soloQ games. He is not scared of any of you.</h4>
+        <app-lpcheckbutton class="button"></app-lpcheckbutton>
+    </mat-card-content>
+  </mat-card>
