--- a/src/app/lpcheckbutton/lpcheckbutton.component.html
+++ b/src/app/lpcheckbutton/lpcheckbutton.component.html
@@ -1,5 +1,16 @@
+<!-- <div class="file-upload">
+    <button mat-raised-button color="primary" class="upload-btn"
+    (click)="redirect()">
+      CDOG LP CHECKER
+    </button>
+</div> -->
+
+<input type="file" class="file-input"
+    (change)="onFileSelected($event)" #fileUpload>
+
 <div class="file-upload">
-    <button mat-raised-button color="primary" class="upload-btn">
-      <h4>CDOG LP CHECKER</h4>
+    <button mat-raised-button color="primary" class="upload-btn"
+      (click)="fileUpload.click()">
+      CDOG LP CHECKER
     </button>
 </div>
